--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Pager React Chat</title>
+        <title>Juampick React Chat</title>
     </head>
     <body>
         <div id="app"></div>
